myapps/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airtng-app
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: app.13.208.245.103.nip.io
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 3000
            path: /
            pathType: Prefix
